translation + placeholder teaching_mode

--- a/app/Resources/views/course_info/presentation/form/_teaching_mode_class.html.twig
+++ b/app/Resources/views/course_info/presentation/form/_teaching_mode_class.html.twig
@@ -1,5 +1,5 @@
 <div id="teaching-mode-class" class="">
-    <label>Type d'enseignement supplémentaire (facultatif)</label>
+    <label{{ 'app.presentation.form.teaching_mode.additionnal' | trans }}></label>
     {{ form_errors(form.teachingOtherTypeClass) }}
     <div class="row">
         <div class="col" style="max-width: 120px;">
