--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -1,5 +1,5 @@
 
-<label class="font-weight-bold">Volumes horaires "Présentiel" importés</label>
+<label class="font-weight-bold">{{ 'app.presentation.form.teaching_mode.volumes' | trans }}</label>
 <div class="row mb-3">
     {% if courseInfo.teachingCmClass is not null %}
         <div class="col-md-4 col-sm-6 col-12">
@@ -23,7 +23,7 @@
 
 <div class="row">
     <div class="col-md-5">
-        <label class="required font-weight-bold">Quel est votre mode d'enseignement ?</label>
+        <label class="required font-weight-bold">{{ 'app.presentation.form.teaching_mode.label' | trans }}</label>
         {{ form_row(form.teachingMode, {label_attr: {class: 'radio-custom'} }) }}
     </div>
     <div class="col-md-7">
@@ -36,32 +36,24 @@
 
 <div class="row mt-3">
     <div class="col">
-        <div class="row mb-4">
-            <div class="col">
-
-            </div>
-        </div>
         <div class="row mb-2">
             <div class="col-5">
                 {{ form_row(form.teachingMode, {label_attr: {class: 'radio-custom'} }) }}
             </div>
-            <div class="col-5">
-                <div class="row">
+            <div class="col-7">
+                <div class="row mb-2">
                     <div class="col">
                         {{ form_widget(form.teachingCmClass) }}
-                        <label placeholder="Heures CM"></label>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mb-2">
                     <div class="col">
                         {{ form_widget(form.teachingTdClass) }}
-                        <label placeholder="Heures TD"></label>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mb-2">
                     <div class="col">
                         {{ form_widget(form.teachingTpClass) }}
-                        <label placeholder="Heures TP"></label>
                     </div>
                 </div>
             </div>
@@ -70,108 +62,93 @@
         <div class="row teaching-mode teaching-mode-class d-none">
             <div class="col">
                 {{ form_errors(form.teachingOtherTypeClass) }}
-                <div class="row">
+                <div class="row mb-2">
                     <div class="col pr-1">
                         {{ form_widget(form.teachingOtherClass) }}
-                        <label placeholder="Heures autre"></label>
                     </div>
                     <div class="col pl-1">
                         {{ form_widget(form.teachingOtherTypeClass) }}
-                        <label placeholder="Type"></label>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row teaching-mode teaching-mode-distant d-none">
             <div class="col">
-                <div class="row">
+                <div class="row mb-2">
                     <div class="col">
                         {{ form_widget(form.teachingCmDist) }}
-                        <label placeholder="Heures CM"></label>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mb-2">
                     <div class="col">
                         {{ form_widget(form.teachingTdDist) }}
-                        <label placeholder="Heures TD"></label>
                     </div>
                 </div>
                 {{ form_errors(form.teachingOtherTypeDist) }}
-                <div class="row">
+                <div class="row mb-2">
                     <div class="col pr-1">
                         {{ form_widget(form.teachingOtherDist) }}
-                        <label placeholder="Heures autre"></label>
                     </div>
                     <div class="col pl-1">
                         {{ form_widget(form.teachingOtherTypeDist) }}
-                        <label placeholder="Type"></label>
                     </div>
                 </div>
             </div>
         </div>
         <div class="teaching-mode teaching-mode-hybrid d-none">
-            <div class="row">
+            <div class="row mb-2">
                 <div class="col">
-                    <h4 class="mb-2">Présentiel</h4>
+                    <h4 class="mb-2">{{ 'app.presentation.form.teaching_mode.class' | trans }}</h4>
                 </div>
                 <div class="col">
-                    <h4 class="mb-2">A distance</h4>
+                    <h4 class="mb-2">{{ 'app.presentation.form.teaching_mode.distant' | trans }}</h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="row">
+                    <div class="row mb-2">
                         <div class="col">
                             {{ form_widget(form.teachingCmHybridClass) }}
-                            <label placeholder="Heures CM"></label>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mb-2">
                         <div class="col">
                             {{ form_widget(form.teachingTdHybridClass) }}
-                            <label placeholder="Heures TD"></label>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mb-2">
                         <div class="col">
                             {{ form_widget(form.teachingTpHybridClass) }}
-                            <label placeholder="Heures TP"></label>
                         </div>
                     </div>
                     {{ form_errors(form.teachingOtherTypeHybridClass) }}
-                    <div class="row">
+                    <div class="row mb-2">
                         <div class="col pr-1">
                             {{ form_widget(form.teachingOtherHybridClass) }}
-                            <label placeholder="Heures autre"></label>
                         </div>
                         <div class="col pl-1">
                             {{ form_widget(form.teachingOtherTypeHybridClass) }}
-                            <label placeholder="Type"></label>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="row">
+                    <div class="row mb-2">
                         <div class="col">
                             {{ form_widget(form.teachingCmHybridDist) }}
-                            <label placeholder="Heures CM"></label>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mb-2">
                         <div class="col">
                             {{ form_widget(form.teachingTdHybridDist) }}
-                            <label placeholder="Heures TD"></label>
                         </div>
                     </div>
-                    {{ form_errors(form.teachingOtherTypeHybridDistant) }}
-                    <div class="row">
+                    <div class="row mb-2">
+                        {{ form_errors(form.teachingOtherTypeHybridDistant) }}
                         <div class="col pr-1">
                             {{ form_widget(form.teachingOtherHybridDist) }}
-                            <label placeholder="Heures autre"></label>
                         </div>
                         <div class="col pl-1">
                             {{ form_widget(form.teachingOtherTypeHybridDistant) }}
-                            <label placeholder="Type"></label>
                         </div>
                     </div>
                 </div>
@@ -179,12 +156,13 @@
         </div>
     </div>
 </div>
+
 <div class="mt-2">
     <button type="submit" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_presentation_teaching_mode_view', {'id': courseInfo.id}) }}">
-        Sauvegarder
+        {{ 'app.general.button.save' | trans }}
     </button>
     <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('course_presentation_teaching_mode_view', {'id': courseInfo.id}) }}">
-        Annuler
+        {{ 'app.general.button.cancel' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
