Refacto + secure Domain controller

--- a/app/Resources/views/domain/index.html.twig
+++ b/app/Resources/views/domain/index.html.twig
@@ -3,29 +3,36 @@
 {% block subContent %}
 
     <div class="card">
-        <div class="card-header">
-            {{ form_start(form) }}
-            <div class="row ui-front">
-                <div class="col-md-2">
-                    {{ form_row(form.label) }}
-                </div>
-                <div class="col-md-2">
-                    {{ form_label(form.structures.label, 'Structures') }}
-                    {{ form_widget(form.structures.label) }}
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin.domain_index')  }}">Réinitialiser les filtres</a>
-                </div>
-                <div class="offset-md-2"></div>
-                <div class="col-md-3 col-sm-6">
-                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin.domain_new')  }}">Ajouter un domaine</a>
-                </div>
-            </div>
-            <input type="submit" style="position: absolute; left: -9999px"/>
-            {{ form_end(form) }}
-        </div>
 
         <div class="card-body">
+
+            <div class="d-flex justify-content-end pb-3">
+                {% include 'action/_domain_create.html.twig' %}
+            </div>
+
+            <div class="border p-3 mb-3">
+                {{ form_start(form) }}
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        {{ form_row(form.label) }}
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <div class="form-group">
+                            {{ form_label(form.structures.label, 'Structures') }}
+                            {{ form_widget(form.structures.label) }}
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Filtrer</button>
+                            <a class="btn btn-danger" href="{{  path('app.admin.domain.index')  }}">Réinitialiser les filtres</a>
+                        </div>
+                    </div>
+                </div>
+
+                {{ form_end(form) }}
+            </div>
+
             {% if pagination.totalItemCount > 0 %}
                 <table class="table table-bordered table-responsive-sm">
                     <thead>
@@ -39,7 +46,11 @@
                     {% for domain in pagination %}
                         <tr>
                             <td>
-                                <a href="{{ path('app_admin.domain_edit', { 'id' : domain.id }) }}">{{ domain.label }}</a>
+                                {% if is_granted('ROLE_ADMIN_DOMAIN_UPDATE') %}
+                                    <a href="{{ path('app.admin.domain.edit', { 'id' : domain.id }) }}">{{ domain.label }}</a>
+                                {% else %}
+                                    {{ domain.label }}
+                                {% endif %}
                             </td>
                             <td>
                                 {% for structure in domain.structures %}
