Teaching mode render improvement in progress

--- a/app/Resources/views/course_info/presentation/form/_teaching_mode_class.html.twig
+++ b/app/Resources/views/course_info/presentation/form/_teaching_mode_class.html.twig
@@ -1,11 +1,11 @@
-<div id="teaching-mode-class" class="">
+<div class="teaching-mode teaching-mode-class d-none">
     <label>Type d'enseignement supplémentaire (facultatif)</label>
     {{ form_errors(form.teachingOtherTypeClass) }}
     <div class="row">
-        <div class="col" style="max-width: 120px;">
+        <div class="col-sm" style="max-width: 120px;">
             {{ form_widget(form.teachingOtherClass) }}
         </div>
-        <div class="col">
+        <div class="col-sm">
             {{ form_widget(form.teachingOtherTypeClass) }}
         </div>
     </div>
