--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -38,7 +38,7 @@
         </li>
 
         {% set referentielLink = ['app.admin.activity.', 'app.admin.activity_type.', 'app.admin.activity_mode.','app.admin.year.',
-            'app_admin.equipment', 'app_admin.structure', 'app.admin.domain.', 'app_admin.period_index', 'app_admin.language_index',
+            'app.admin.equipment', 'app_admin.structure', 'app.admin.domain.', 'app_admin.period_index', 'app_admin.language_index',
             'app.admin.campus.', 'app_admin.achievement', 'app_admin.course_info_field_index'] %}
         <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(referentielLink) ? 'menu-open' }}">
             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(referentielLink) }}">
@@ -62,52 +62,53 @@
                 </li>
 
                 {% set activityLink = ['app.admin.activity.', 'app.admin.activity_type.', 'app.admin.activity_mode.'] %}
-                <li class="nav-item pl-2 has-treeview {{ printActiveAdminSidebarLink(activityLink) ? 'menu-open' }}">
-                    <a href="#" class="nav-link {{ printActiveAdminSidebarLink(activityLink) }}">
-                        <i class="nav-icon fas fa-film"></i>
-                        <p>
-                            Activités
-                            <i class="right fas fa-angle-left"></i>
-                        </p>
-                    </a>
-                    <ul class="nav nav-treeview"
-                        style="display: {{ printActiveAdminSidebarLink(activityLink) ? 'block' : 'none' }};">
-                        {% if is_granted('ROLE_ADMIN_ACTIVITY') %}
-                            <li class="pl-3">
-                                <a href="{{ path('app.admin.activity.index') }}"
-                                   class="nav-link {{ printActiveAdminSidebarLink(['app.admin.activity.']) }}">
-                                    <i class="fas fa-dot-circle nav-icon"></i>
-                                    <p>
-                                        Activités
-                                    </p>
-                                </a>
-                            </li>
-                        {% endif %}
-                        {% if is_granted('ROLE_ADMIN_ACTIVITYTYPE') %}
-                            <li class="pl-3">
-                                <a href="{{ path('app.admin.activity_type.index') }}"
-                                   class="nav-link {{ printActiveAdminSidebarLink(['app.admin.activity_type.']) }}">
-                                    <i class="fas fa-dot-circle nav-icon"></i>
-                                    <p>
-                                        Types
-                                    </p>
-                                </a>
-                            </li>
-                        {% endif %}
-                        {% if is_granted('ROLE_ADMIN_ACTIVITYMODE') %}
-                            <li class="pl-3">
-                                <a href="{{ path('app.admin.activity_mode.index') }}"
-                                   class="nav-link {{ printActiveAdminSidebarLink(['app_admin.mode_activity']) }}">
-                                    <i class="fas fa-dot-circle nav-icon"></i>
-                                    <p>
-                                        Modes
-                                    </p>
-                                </a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                </li>
-
+                {% if is_granted('ROLE_ADMIN_ACTIVITY') or is_granted('ROLE_ADMIN_ACTIVITYTYPE') or is_granted('ROLE_ADMIN_ACTIVITYMODE') %}
+                    <li class="nav-item pl-2 has-treeview {{ printActiveAdminSidebarLink(activityLink) ? 'menu-open' }}">
+                        <a href="#" class="nav-link {{ printActiveAdminSidebarLink(activityLink) }}">
+                            <i class="nav-icon fas fa-film"></i>
+                            <p>
+                                Activités
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview"
+                            style="display: {{ printActiveAdminSidebarLink(activityLink) ? 'block' : 'none' }};">
+                            {% if is_granted('ROLE_ADMIN_ACTIVITY') %}
+                                <li class="pl-3">
+                                    <a href="{{ path('app.admin.activity.index') }}"
+                                       class="nav-link {{ printActiveAdminSidebarLink(['app.admin.activity.']) }}">
+                                        <i class="fas fa-dot-circle nav-icon"></i>
+                                        <p>
+                                            Activités
+                                        </p>
+                                    </a>
+                                </li>
+                            {% endif %}
+                            {% if is_granted('ROLE_ADMIN_ACTIVITYTYPE') %}
+                                <li class="pl-3">
+                                    <a href="{{ path('app.admin.activity_type.index') }}"
+                                       class="nav-link {{ printActiveAdminSidebarLink(['app.admin.activity_type.']) }}">
+                                        <i class="fas fa-dot-circle nav-icon"></i>
+                                        <p>
+                                            Types
+                                        </p>
+                                    </a>
+                                </li>
+                            {% endif %}
+                            {% if is_granted('ROLE_ADMIN_ACTIVITYMODE') %}
+                                <li class="pl-3">
+                                    <a href="{{ path('app.admin.activity_mode.index') }}"
+                                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.mode_activity']) }}">
+                                        <i class="fas fa-dot-circle nav-icon"></i>
+                                        <p>
+                                            Modes
+                                        </p>
+                                    </a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </li>
+                {% endif %}
                 {% if is_granted('ROLE_ADMIN_YEAR') %}
                     <li class="nav-item pl-2">
                         <a href="{{ path('app.admin.year.index') }}"
@@ -132,25 +133,29 @@
                     </li>
                 {% endif %}
 
-                <li class="nav-item pl-2">
-                    <a href="{{ path('app.admin.domain.index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app.admin.domain.']) }}">
-                        <i class="fas fa-gem nav-icon"></i>
-                        <p>
-                            Domaines
-                        </p>
-                    </a>
-                </li>
+                {% if is_granted('ROLE_ADMIN_DOMAIN') %}
+                    <li class="nav-item pl-2">
+                        <a href="{{ path('app.admin.domain.index') }}"
+                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.domain.']) }}">
+                            <i class="fas fa-gem nav-icon"></i>
+                            <p>
+                                Domaines
+                            </p>
+                        </a>
+                    </li>
+                {% endif %}
 
-                <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin.equipment_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.equipment']) }}">
-                        <i class="nav-icon fas fa-drafting-compass"></i>
-                        <p>
-                            Equipements
-                        </p>
-                    </a>
-                </li>
+                {% if is_granted('ROLE_ADMIN_EQUIPMENT') %}
+                    <li class="nav-item pl-2">
+                        <a href="{{ path('app.admin.equipment.index') }}"
+                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.equipment.']) }}">
+                            <i class="nav-icon fas fa-drafting-compass"></i>
+                            <p>
+                                Equipements
+                            </p>
+                        </a>
+                    </li>
+                {% endif %}
 
                 <li class="nav-item pl-2">
                     <a href="{{ path('app_admin.language_index') }}"
