--- a/app/Resources/views/language/index.html.twig
+++ b/app/Resources/views/language/index.html.twig
@@ -3,25 +3,30 @@
 {% block subContent %}
 
     <div class="card">
-        <div class="card-header">
-            {{ form_start(form) }}
-            <div class="row ui-front">
-                <div class="col-md-2">
-                    {{ form_row(form.label) }}
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin.language_index')  }}">Réinitialiser les filtres</a>
-                </div>
-                <div class="offset-md-4"></div>
-                <div class="col-md-3 col-sm-6 text-right">
-                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin.language_new')  }}">Ajouter un language</a>
-                </div>
-            </div>
-            <input type="submit" style="position: absolute; left: -9999px"/>
-            {{ form_end(form) }}
-        </div>
 
         <div class="card-body">
+
+            <div class="d-flex justify-content-end pb-3">
+                {% include 'action/_language_create.html.twig' %}
+            </div>
+
+            <div class="border p-3 mb-3">
+                {{ form_start(form) }}
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        {{ form_row(form.label) }}
+                    </div>
+                    <div class="col-12">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Filtrer</button>
+                            <a class="btn btn-danger" href="{{  path('app.admin.language.index')  }}">Réinitialiser les filtres</a>
+                        </div>
+                    </div>
+                </div>
+
+                {{ form_end(form) }}
+            </div>
+
             {% if pagination.totalItemCount > 0 %}
                 <table class="table table-bordered table-responsive-sm">
                     <thead>
@@ -34,7 +39,11 @@
                     {% for language in pagination %}
                         <tr>
                             <td>
-                                <a href="{{ path('app_admin.language_edit', { 'id' : language.id }) }}">{{ language.label }}</a>
+                                {% if is_granted('ROLE_ADMIN_LANGUAGE_UPDATE') %}
+                                    <a href="{{ path('app.admin.language.edit', { 'id' : language.id }) }}">{{ language.label }}</a>
+                                {% else %}
+                                    {{ language.label }}
+                                {% endif %}
                             </td>
                             <td>
                                 {{ language.obsolete|humanizeBoolean }}
