--- a/app/Resources/views/period/index.html.twig
+++ b/app/Resources/views/period/index.html.twig
@@ -3,43 +3,54 @@
 {% block subContent %}
 
     <div class="card">
-        <div class="card-header">
-            {{ form_start(form) }}
-            <div class="row ui-front">
-                <div class="col-md-2">
-                    {{ form_row(form.label) }}
-                </div>
-                <div class="col-md-2">
-                    {{ form_label(form.structures.label, 'Structures') }}
-                    {{ form_widget(form.structures.label) }}
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin.period_index')  }}">Réinitialiser les filtres</a>
-                </div>
-                <div class="offset-md-2"></div>
-                <div class="col-md-3 col-sm-6">
-                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin.period_new')  }}">Ajouter une période</a>
-                </div>
-            </div>
-            <input type="submit" style="position: absolute; left: -9999px"/>
-            {{ form_end(form) }}
-        </div>
 
         <div class="card-body">
+
+            <div class="d-flex justify-content-end pb-3">
+                {% include 'action/_period_create.html.twig' %}
+            </div>
+
+            <div class="border p-3 mb-3">
+                {{ form_start(form) }}
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        {{ form_row(form.label) }}
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <div class="form-group">
+                            {{ form_label(form.structures.label, 'Structures') }}
+                            {{ form_widget(form.structures.label) }}
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Filtrer</button>
+                            <a class="btn btn-danger" href="{{  path('app.admin.period.index')  }}">Réinitialiser les filtres</a>
+                        </div>
+                    </div>
+                </div>
+
+                {{ form_end(form) }}
+            </div>
+
             {% if pagination.totalItemCount > 0 %}
                 <table class="table table-bordered table-responsive-sm">
                     <thead>
                     <tr>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.label'|trans, 'a.label') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.period.label.label'|trans, 'a.label') }}</th>
                         <th>Structure</th>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.obsolete'|trans, 'a.obsolete') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.period.label.obsolete'|trans, 'a.obsolete') }}</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for period in pagination %}
                         <tr>
                             <td>
-                                <a href="{{ path('app_admin.period_edit', { 'id' : period.id }) }}">{{ period.label }}</a>
+                                {% if is_granted('ROLE_ADMIN_PERIOD_UPDATE') %}
+                                    <a href="{{ path('app.admin.period.edit', { 'id' : period.id }) }}">{{ period.label }}</a>
+                                {% else %}
+                                    {{ period.label }}
+                                {% endif %}
                             </td>
                             <td>
                                 {% for structure in period.structures %}
